# TrafficControlSystem

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
AmpelTest/: .cproject  .gitignore  .project  AmpelTest.xml
AmpelTest/Debug/: makefile
AmpelTest/Debug Gcov/: makefile
AmpelTest/Debug Gcov/src/: subdir.mk
AmpelTest/Debug/src/: subdir.mk
AmpelTest/include/: AmpelReference.h  AmpelReferenceTest.h  AmpelTest.h  MockLamp.h  Timer.h  TrafficLightReference.h  TrafficLightReferenceTest.h  TrafficLightTest.h
AmpelTest/src/: AmpelTest.cpp  Test.cpp  TrafficLightTest.cpp
CrossRoadCUTE/: .cproject  .gitignore  .project  CMakeLists.txt  CrossRoadCUTE.xml
CrossRoadCUTE/Mocks/: DurationStreamOperator.hpp  EnumStreamOperator.hpp  MockTimer.hpp  MockTrafficLight.hpp
CrossRoadCUTE/include/: CrossRoadBaseTest.hpp  CrossRoadOperationTest.hpp  CrossRoadStartTest.hpp  CrossRoadTest.hpp  CrossRoadTriggerTest.hpp  DefectTest.hpp  FlashDeferredTest.hpp  OperationflashTest.hpp  OperationtriggerTest.hpp  PriorityTest.hpp  RegulateTrafficDeferredTest.hpp  StartIgnoredEventsTest.hpp  StartTest.hpp  TriggerTest.hpp
CrossRoadCUTE/src/: Test.cpp
CrossRoadLib/: CMakeLists.txt  CrossRoad.md
CrossRoadLib/Model/: CrossRoadLib.xml
CrossRoadLib/include/CrossRoad/: CrossRoad.hpp  ProtocolViolationException.hpp  Timer.hpp  TrafficLight.hpp
CrossRoadLib/include/CrossRoad/Mocks/: DurationStreamOperator.hpp  EnumStreamOperator.hpp  MockTimer.hpp  MockTrafficLight.hpp
CrossRoadLib/src/: CrossRoad.cpp
CrossRoadLib/test/cute/: CrossRoadBaseTest.hpp  CrossRoadOperationTest.hpp  DefectTest.hpp  OperationflashTest.hpp  OperationtriggerTest.hpp  PriorityTest.hpp  RegulateTrafficDeferredTest.hpp  StartIgnoredEventsTest.hpp  StartTest.hpp  main.cpp
Demos/: .cproject  .project  CMakeLists.txt
Demos/include/: CrossRoadBuilder.hpp  ModelFactory.hpp  TimerAdapter.hpp  TrafficLight.hpp
Demos/src/: DemoCrossRoad.cpp  DemoTrafficLight.cpp  main.cpp
Model/: Tests.xml
PeriodicTimer/: CMakeLists.txt
PeriodicTimerCUTE/: CMakeLists.txt
ResultManagerCUTE/: .cproject  .gitignore  .project  CMakeLists.txt  ResultManagerCUTE.xml
ResultManagerCUTE/include/: ResultManagerTest.hpp
ResultManagerCUTE/src/: Test.cpp
ResultManagerMock/: .cproject  .project  CMakeLists.txt
ResultManagerMock/include/Mock/: ResultManager.hpp
ResultManagerMock/src/: ResultManager.cpp
ResultManagerMock/test/: ResultManagerTest.cpp
Sensor/: .cproject  .project  CMakeLists.txt  Sensor.md  main.cpp
Sensor/Model/: Sensor.xml
Sensor/include/Sensor/: ListenerMultiple.h  ListenerSingleRawPointer.h  Sensor.h  SensorListener.h
TCS_CrossRoadCUTE/: .cproject  .gitignore  .project
TCS_CrossRoadCUTE/Mocks/: MockTimer.hpp  MockTrafficLight.hpp
TCS_CrossRoadLib/: .cproject  .project
TCS_CrossRoadLib/include/CrossRoad/: CrossRoad.hpp  Timer.hpp  TrafficLight.hpp
TCS_CrossRoadLib/src/: CrossRoad.cpp
TrafficControlSystem/: .cproject  .project  CMakeLists.txt  TrafficControlSystem.md
TrafficControlSystem/Debug/: makefile  objects.mk  sources.mk
TrafficControlSystem/Debug/Demos/: DemoTrafficLight.d  subdir.mk
TrafficControlSystem/Demos/: DemoTrafficLight.cpp
TrafficControlSystem/include/TCS/: CrossRoadSensorAdapter.hpp  CrossRoadTimerAdapter.hpp  HardwareFactory.hpp  Lamp.h  Lamp.hpp  LampIP.hpp  ModelBuilder.hpp  TrafficLight.hpp  TrafficLightStatePattern.hpp
TrafficControlSystem/src/: main.cpp
TrafficLightCUTE/: .cproject  .gitignore  .project  CMakeLists.txt  TrafficLightCUTE.xml  TrafficLightTest.xml
TrafficLightCUTE/Debug/: makefile  objects.mk
TrafficLightCUTE/Debug/src/: subdir.mk
TrafficLightCUTE/Mocks/: MockLamp.h  MockLamp.hpp  MockPeriodicTimer.hpp
TrafficLightCUTE/include/: ReferenceTest.h  TrafficLightMiddleEuropeTest.h  TrafficLightReference.hpp  TrafficLightReferenceTest.h  TrafficLightStatePatternTest.h  TrafficLightSwitchedTest.h  TrafficLightTest.h
TrafficLightCUTE/src/: Test.cpp  TrafficLightTest.cpp
TrafficLightTest/: .cproject  .project
TrafficLightTest/Debug Gcov/: makefile
TrafficLightTest/Debug Gcov/src/: subdir.mk
TrafficLightTest/Debug/src/: subdir.mk
TrafficLightTest/Mocks/: MockLamp.h
TrafficLightTest/include/: MockLamp.h  Timer.h  TrafficLightReference.h  TrafficLightTest.h
TrafficLightTests/: CMakeLists.txt
TrafficLightTests/Mocks/: GMockLamp.hpp  MockLamp.hpp  MockPeriodicTimer.hpp
TrafficLightTests/include/: TrafficLightReference.hpp
TrafficLightTests/include/Mocks/: GMockLamp.hpp  GMockPeriodicTimer.hpp  MockLamp.hpp  MockPeriodicTimer.hpp
TrafficLightTests/test/: TrafficLightMiddleEuropeTestFixture.h  TrafficLightMiddleEuropeTestPolicy.h  TrafficLightReferenceTest.cpp  TrafficLightStatePatternTest.cpp  TrafficLightSwitchedTest.cpp  TrafficLightTestFixture.h
TrafficLightTests/test/cute/: TrafficLightMiddleEuropeTest.h  TrafficLightMiddleEuropeTestPolicy.h  TrafficLightReferenceTest.h  TrafficLightStatePatternTest.h  TrafficLightSwitchedTest.h  TrafficLightTest.h  TrafficLightTestFixture.h  TrafficLightTestPolicy.h  main.cpp
TrafficLightTests/test/gtest/: TrafficLightMiddleEuropeTestPolicy.h  TrafficLightReferenceTest.cpp  TrafficLightStatePatternTest.cpp  TrafficLightSwitchedTest.cpp  TrafficLightTestFixture.h  TrafficLightTestPolicy.h
